--- a/Pandas03_그룹핑과통계데이터다루기.ipynb
+++ b/Pandas03_그룹핑과통계데이터다루기.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_17108\\2995416522.py:2: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  from pandas import Series, DataFrame\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -51,36 +37,36 @@
        "      <th>0</th>\n",
        "      <td>a</td>\n",
        "      <td>one</td>\n",
-       "      <td>-1.541419</td>\n",
-       "      <td>1.139688</td>\n",
+       "      <td>-0.793319</td>\n",
+       "      <td>0.866019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>a</td>\n",
        "      <td>two</td>\n",
-       "      <td>0.170169</td>\n",
-       "      <td>1.914866</td>\n",
+       "      <td>-0.115105</td>\n",
+       "      <td>0.570973</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>b</td>\n",
        "      <td>one</td>\n",
-       "      <td>0.478558</td>\n",
-       "      <td>1.151265</td>\n",
+       "      <td>-0.092028</td>\n",
+       "      <td>0.595252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>b</td>\n",
        "      <td>two</td>\n",
-       "      <td>-0.380784</td>\n",
-       "      <td>-0.365598</td>\n",
+       "      <td>-0.337804</td>\n",
+       "      <td>-1.568311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>a</td>\n",
        "      <td>one</td>\n",
-       "      <td>1.275307</td>\n",
-       "      <td>-2.682036</td>\n",
+       "      <td>0.143007</td>\n",
+       "      <td>-1.596230</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -88,14 +74,14 @@
       ],
       "text/plain": [
        "  key1 key2     data1     data2\n",
-       "0    a  one -1.541419  1.139688\n",
-       "1    a  two  0.170169  1.914866\n",
-       "2    b  one  0.478558  1.151265\n",
-       "3    b  two -0.380784 -0.365598\n",
-       "4    a  one  1.275307 -2.682036"
+       "0    a  one -0.793319  0.866019\n",
+       "1    a  two -0.115105  0.570973\n",
+       "2    b  one -0.092028  0.595252\n",
+       "3    b  two -0.337804 -1.568311\n",
+       "4    a  one  0.143007 -1.596230"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,28 +100,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x000002315E562F50>"
+       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x000001BC3B574310>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#메서드 체인(함수체인)\n",
     "grouped = df.groupby(\"key1\")[\"data1\"]\n",
     "grouped"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -143,12 +130,12 @@
      "output_type": "stream",
      "text": [
       "key1\n",
-      "a   -0.031981\n",
-      "b    0.048887\n",
+      "a   -0.255139\n",
+      "b   -0.214916\n",
       "Name: data1, dtype: float64\n",
       "key1\n",
-      "a   -0.095943\n",
-      "b    0.097774\n",
+      "a   -0.765418\n",
+      "b   -0.429832\n",
       "Name: data1, dtype: float64\n",
       "key1\n",
       "a    3\n",
@@ -165,21 +152,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "key1  key2\n",
-       "a     one    -0.133056\n",
-       "      two     0.170169\n",
-       "b     one     0.478558\n",
-       "      two    -0.380784\n",
+       "a     one    -0.325156\n",
+       "      two    -0.115105\n",
+       "b     one    -0.092028\n",
+       "      two    -0.337804\n",
        "Name: data1, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +263,7 @@
        "4   1  김길동   80  89   80"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +291,7 @@
        "465"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +303,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +326,7 @@
        "93.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +423,7 @@
        "3   2  박문수  100  92  100"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +520,7 @@
        "4   1  김길동   80  89   80"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +649,7 @@
        "4   1  김길동   80  89   80  249  83.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +757,7 @@
        "4   1  김길동   80  89   80  249  83.000000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +769,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>학급</th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>수학</th>\n",
+       "      <th>전체</th>\n",
+       "      <th>평균</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>이름</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>김길동</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>83.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>박문수</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>292.0</td>\n",
+       "      <td>97.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>이순신</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>282.0</td>\n",
+       "      <td>94.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>전우치</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>260.0</td>\n",
+       "      <td>86.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>홍길동</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>90.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      학급     국어    영어     수학     전체         평균\n",
+       "이름                                            \n",
+       "김길동  1.0   80.0  89.0   80.0  249.0  83.000000\n",
+       "박문수  2.0  100.0  92.0  100.0  292.0  97.333333\n",
+       "이순신  2.0   95.0  95.0   92.0  282.0  94.000000\n",
+       "전우치  1.0   90.0  90.0   80.0  260.0  86.666667\n",
+       "홍길동  1.0  100.0  80.0   90.0  270.0  90.000000"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfClass.groupby(\"이름\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +893,7 @@
        "Name: 국어, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +946,7 @@
        "수학평균  88.4"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +1008,7 @@
        "2   96.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +1082,7 @@
        "2   97.5  96.000000  93.500000   2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
